# computron_9000

./: .containerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEBASE_ANALYSIS.md  DEVELOPMENT.md  IDEAS.md  IMPLEMENTATION_SUMMARY.md  Justfile  LICENSE  PLAN_multi_provider.md  PLAN_token_streaming.md  PROGRESS_AWARE_TERMINATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  SEMANTIC_MEMORY_IMPLEMENTATION.md  TA-MEM-plan.md  computron_os_dockerfile  config.yaml  docker-compose.yml  gemma3_tools_Modelfile  logging_config.py  main.py  modelfile  pii_scan_report.md  prosumer_agentic_names.txt  pyproject.toml  schema_demo.py  settings.py  start_ollama.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
agents/: README.md  __init__.py  _agent_builder.py  _agent_profiles.py  _list_profiles_tool.py  _profiles.py  _registry.py  agent.py  agents.py  computron.py  file_system.py  models.py  prompt.py  types.py
agents/adk/: __init__.py  agent.py  computron.py  file_system.py  message_handler.py  model_utils.py  test_web_agent.py  types.py  web.py
agents/browser/: __init__.py  agent.py
agents/coding/: __init__.py  agent.py
agents/computron/: __init__.py  agent.py
agents/computron_skills/: __init__.py  agent.py
agents/default_profiles/: code_expert.json  computron.json  creative_writer.json  research_agent.json
agents/desktop/: __init__.py  agent.py
agents/goal_planner/: __init__.py  agent.py
agents/media/: __init__.py  agent.py
agents/ollama/: __init__.py  agents.py  computron_agent.py  message_handler.py  root_agent.py  web_agent.py
agents/pydantic_ai/: __init__.py  agent.py  computron.py  file_system.py  message_handler.py  test_web_agent.py  web.py
agents/sub_agent/: agent.py
brokers/: __init__.py
brokers/_common/: __init__.py  _env.py  _ready.py  _rpc.py
brokers/email_broker/: __init__.py  __main__.py  _imap_client.py  _verbs.py
config/: __init__.py
container/: Dockerfile  Dockerfile.inference  README.md  a11y_tree.py  entrypoint.sh  grounding_client.py  grounding_server.py  inference_client.py  inference_server.py  start-desktop.sh
conversations/: __init__.py  _models.py  _store.py  _title_generation.py
docs/: agent_event_refactor_plan.md  agents.md  coder_agent.md  coder_workflow_improvements.md  compaction_strategy.md  conversation_history_improvements.md  event_context_system_evaluation.md  future_refactors.md  hooks.md  integrations.md  migrations.md  multi_agent_architecture.md  sdk_semantics.md  semantic_cache_implementation.md  setup.md  stop_mechanism_cleanup.md  telegram_integration.md  ui_architecture.md
docs/design/: design_language.html
docs/plans/: global-button-refactor.md  progressive_skill_loading.md
docs/skills_optimization/: experiments.md  results.md  strategy.md
docs/summarizer_optimization/: CHANGELOG.md  experiments.md  results.md  run_full_conv_eval.py  run_grouping_eval.py  run_prompt_eval.py  run_real_eval.py  run_scenarios.py  strategy.md
e2e/: _helpers.py  conftest.py  test_agent_profiles.py  test_profile_management.py  test_profile_ui_state.py  test_system_settings.py
e2e/chat/: test_markdown_rendering.py  test_multi_turn.py  test_resume.py  test_upload.py
e2e/conversations/: test_conversation_list.py
e2e/goals/: test_goal_lifecycle.py
e2e/network/: test_network_depth.py  test_network_lifecycle.py  test_network_multi_turn.py  (+1 more)
examples/: semantic_cache_demo.py
integrations/: __init__.py  _env.py  _icloud_auth.py  _perms.py  _rpc.py  permissions.py
migrations/: _001_task_agent_to_profile.py  _002_install_default_profiles.py  _003_vision_settings.py  _004_rename_num_ctx.py  _005_multi_provider.py  _005_profile_provider.py  __init__.py  _backup.py  _runner.py
modelfiles/: gemma3_tools_Modelfile  qwen3_30b_a3b_think_modelfile
models/: __init__.py  generate_completion.py  model_configs.py
plans/: TA-MEM-implementation-plan.md  ace_step_music_generation.md  agent_profiles_plan.md  container_distribution.md  conversation_titles_implementation.md  enhanced-memory-system.md  episodic_memory.md  event_context_system_evaluation.md  foundation_1_music_generation.md  future_refactor_ideas.md  go_cli_wrapper.md  human_in_the_loop_design.md  icloud-drive-auth-ui.md  icloud-drive-rework.md  implementation_steps.md  improve_visual_action.md  integrations-followups.md  mcp_integration_implementation_plan.md  multi-provider.md  progress_aware_termination_plan.md  rclone-implementation.md  rclone-integration-remaining.md  semantic_cache_implementation_plan.md  semantic_cache_implementation_plan_current.md  semantic_memory_implementation_plan.md  skills_and_profiles_plan.md
repls/: CREATE_GAME_EVAL.md  README.md  __init__.py  browser_agent.py  browser_tools_repl.py  generate_bash_cmd_repl.py  generate_completion_repl.py  reddit_repl.py  repl_logging.py  test_coder_workflow_repl.py  tool_test_repl.py
sdk/: __init__.py
server/: __init__.py  _feature_routes.py  _icloud_drive_routes.py  _integrations_http.py  _integrations_oauth_routes.py  _integrations_routes.py  _model_routes.py  _oauth.py  _profile_routes.py  _provider_routes.py  _settings_routes.py  _setup_routes.py  _task_routes.py  aiohttp_app.py  aiohttp_server.py  cache_metrics.py  message_handler.py
setup/: __init__.py  _gate.py
skills/: __init__.py  _extractor.py  _models.py  _registry.py  browser.py  coder.py  desktop.py  goal_planner.py  image_generation.py  media.py  music_generation.py
tasks/: __init__.py  _executor.py  _file_store.py  _models.py  _notifier.py  _runner.py  _scheduler.py  _singleton.py  _store.py  _tools.py
telegram/: __init__.py  _formatter.py  _runner.py  _state.py
telegram_bot/: __init__.py  _executor.py  _runner.py
tests/: Agents.md  conftest.py  test_conversation_titles.py  test_logging_config.py  test_progress_aware_termination.py
tools/: __init__.py  _grounding.py  _progress.py  _truncation.py  _vision_logging.py
utils/: __init__.py  cache.py  generate_completion.py  generate_summary.py  higher_order.py  pydantic_schema.py  semantic_cache.py  shutdown.py
(+1222 files in other folders)
