[project]
name = "chat_app"
version = "0.1.0"
description = "A simple chat proxy server for Ollama."
requires-python = ">=3.12"
dependencies = [
    "litellm",
    "aiohttp",
    "pydantic",
    "playwright",
    "playwright==1.52.0",
    "setuptools>=65.0.0",
    "beautifulsoup4",
    "podman==5.4.0.1",
    "ollama>=0.5.1",
    "cachetools>=5.5.2",
    "python-dotenv>=1.1.0",
    "asyncpraw>=7.8.1",
]
[project.optional-dependencies]
test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio"
]

[tool.uv]
# uv-specific settings can go here
